test/e2e/app-dir/next-config-ts/type-error/next.config.ts
import { defineConfig } from 'next/config'

// type error
let foo: number = 'foo'

const nextConfig = defineConfig({
  env: {
    foo,
  },
})

export default nextConfig
